Fix a few bugs and add a feature. (#1111)
- Link injection for document headers has been broken for a while due to my
misunderstanding of the "for in" syntax in JavaScript. This now works as expected.

- Same problem also prevented the feature that causes every link to outside of istio.io
to be opened in a separate window. This now works as intended.

- Made the gear dropdown menu be right-aligned such that it doesn't go off-screen on
portrait mode tablets.

- Stop importing Popper.js since it's only needed for dropdown menus that aren't in the
nav bar. Ours is in a nav bar...

- Added link injection for <dt> terms, which makes it easy to create links to individual glossary entries.

--- a/_sass/base/_common.scss
+++ b/_sass/base/_common.scss
@@ -291,7 +291,8 @@ h2:hover .header-link,
 h3:hover .header-link,
 h4:hover .header-link,
 h5:hover .header-link,
-h6:hover .header-link {
+h6:hover .header-link,
+dt:hover .header-link {
     transition: opacity .4s ease-in-out;
     opacity: 1;
 }
